add generate intermediate code

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bitbox-sdk": "^8.10.1",
     "bitcoinjs-lib": "^5.1.6",
     "bitcore-lib-cash": "^8.9.0",
+    "bs58": "^4.0.1",
     "bulma": "^0.7.5",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -62,6 +63,7 @@
     "resolve-url-loader": "3.1.0",
     "ripple-keypairs": "^0.11.0",
     "sass-loader": "7.2.0",
+    "secure-random": "^1.1.2",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
