--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-qr-reader": "^2.2.1",
+    "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "ripple-keypairs": "^0.11.0",
