--- a/package.json
+++ b/package.json
@@ -4,20 +4,14 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.6.0",
-    "@binance-chain/javascript-sdk": "^2.16.1",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^2·4.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
-    "bip38": "^3.0.0",
-    "bitbox-sdk": "^8.10.1",
-    "bitcoinjs-lib": "^5.1.6",
-    "bitcore-lib-cash": "^8.9.0",
-    "bs58": "^4.0.1",
     "bulma": "^0.7.5",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -32,7 +26,6 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "eth-crypto": "^1.5.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
@@ -62,9 +55,7 @@
     "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "ripple-keypairs": "^0.11.0",
     "sass-loader": "7.2.0",
-    "secure-random": "^1.1.2",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
@@ -79,6 +70,11 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
+  },
+  "workspaces": {
+    "packages": [
+      "src/utils/cryptojs-lib"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
