--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
-    "babel-jest": "^2·4.9.0",
+    "babel-jest": "25.4.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
