--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
+    "ripple-lib": "^1.8.2",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
