better for copy address to excel

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
     "react-audio-player": "^0.13.0",
-    "react-copy-to-clipboard": "^5.0.1",
+    "react-clipboard.js": "^2.0.16",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-qr-reader": "^2.2.1",
