--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
-    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-inline-css-webpack-plugin": "^1.11.2",
+    "html-inline-script-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "4.0.4",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
